--- a/crodeon/reporter.html
+++ b/crodeon/reporter.html
@@ -12,6 +12,9 @@
             },
             sensors: {
                 value: []
+            },
+            relais: {
+                value: []
             }
         },
         label: function() {
