--- a/crodeon/sensor.html
+++ b/crodeon/sensor.html
@@ -33,6 +33,12 @@
             },
             outputs: {
                 value: 1
+            },
+            action: {
+                value: 'latest'
+            },
+            sinceId: {
+                value: 0
             }
         },
         inputs: 1,
@@ -100,6 +106,27 @@
                     }, 500);
                 }
             });
+
+            //action
+            $("#node-input-action").typedInput({type:"action", types:[{
+                value: "action",
+                options: [
+                    { value: "latest", label: "Laatste waarde"},
+                    { value: "sinceId", label: "Vanaf bepaalde ID"}
+                ]
+            }]});
+
+            $("#node-input-action").on('change', function(event, type, value) {
+                if(value === 'sinceId') {
+                    $(".action-sinceId").css('display', 'block');
+                } else {
+                    that.sinceId = 0;
+                    $(".action-sinceId").css('display', 'none');
+                }
+            });
+
+            //since id
+            $("#node-input-sinceId").typedInput({type: 'msg', types: ['msg', 'int']});
         },
         oneditsave: function() {
             this.sensors = $("#node-input-_sensors")
@@ -125,6 +152,14 @@
     <div class="form-row">
         <label for="node-input-_sensors"><i class="fa fa-list"></i> Sensor(s)</label>
         <input type="text" id="node-input-_sensors">
+    </div>
+    <div class="form-row">
+        <label for="node-input-action"><i class="fa fa-flash"></i> Actie</label>
+        <input type="text" id="node-input-action">
+    </div>
+    <div class="form-row action-sinceId" style="display: none;">
+        <label for="node-input-sinceId"><i class="fa fa-pencil"></i> Crodeon ID</label>
+        <input type="text" id="node-input-sinceId">
     </div>
 </script>
 
