--- a/crodeon/relais-reader.html
+++ b/crodeon/relais-reader.html
@@ -99,19 +99,15 @@
 
 <script type="text/html" data-template-name="relais-reader">
     <div class="form-row">
-        <label for="node-input-api_credentials"><i class="fa fa-shield"></i> API login</label>
+        <label for="node-input-api_credentials"><i class="fa fa-shield"></i> <span data-i18n="relaisReader.labels.api_login"></span></label>
         <input type="text" id="node-input-api_credentials">
     </div>
     <div class="form-row">
-        <label for="node-input-reporter"><i class="fa fa-server"></i> Reporter</label>
+        <label for="node-input-reporter"><i class="fa fa-server"></i> <span data-i18n="relaisReader.labels.reporter"></span></label>
         <input type="text" id="node-input-reporter">
     </div>
     <div class="form-row">
-        <label for="node-input-relaisOutput"><i class="fa fa-pencil"></i> Output ID</label>
+        <label for="node-input-relaisOutput"><i class="fa fa-pencil"></i> <span data-i18n="relaisReader.labels.output"></span></label>
         <input type="text" id="node-input-relaisOutput">
     </div>
-</script>
-
-<script type="text/html" data-help-name="relais-reader">
-    <p>Get the current value of the selected relais ouput.</p>
 </script>
